[project]
name = "asteroids"
version = "0.1.0"
description = "This project is a recreation of the classic 1979 Atari Asteroids arcade game. Built as part of the Boot.dev "Build Asteroids using Python and Pygame" course, it demonstrates core game development concepts including object-oriented programming, collision detection, and game loop architecture."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pygame==2.6.1",
]
